--- a/cassie-frontend/src/components/Footer.css
+++ b/cassie-frontend/src/components/Footer.css
@@ -1,15 +1,10 @@
 /* src/components/Footer.css */
-
 .site-footer {
-    background-color: var(--color-navy);
-    color: #fff;
-    padding: 1rem 0;
+    background-color: #242938; /* Matches header color */
+    color: white;
     text-align: center;
-    font-size: 0.9rem;
-  }
-  
-  .site-footer .container {
-    display: flex;
-    justify-content: center;
+    padding: 1rem;
+    position: relative;
+    width: 100%;
   }
   
