--- a/cassie-frontend/src/components/RegistrationForm.css
+++ b/cassie-frontend/src/components/RegistrationForm.css
@@ -25,7 +25,7 @@
   
   .registration-form-container h2 {
     margin-top: 0;
-    color: var(--color-navy);
+    color: var(--color-blue);
     margin-bottom: 1rem;
   }
   
@@ -51,7 +51,7 @@
     border: none;
     font-size: 1.2rem;
     cursor: pointer;
-    color: var(--color-navy);
+    color: var(--color-blue);
   }
   
   .close-btn:hover {
@@ -59,7 +59,7 @@
   }
   
   .registration-form-container button[type="submit"] {
-    background-color: var(--color-navy);
+    background-color: var(--color-blue);
     color: #fff;
     border: none;
     padding: 0.75rem 1.5rem;
@@ -71,6 +71,6 @@
   }
   
   .registration-form-container button[type="submit"]:hover {
-    background-color: #002244;
+    background-color: #242938;
   }
   
