--- a/cassie-frontend/src/pages/EventsList.css
+++ b/cassie-frontend/src/pages/EventsList.css
@@ -334,15 +334,9 @@
 }
 
 @keyframes heartPop {
-  0% {
-    transform: translate(-50%, -50%) scale(1);
-  }
-  50% {
-    transform: translate(-50%, -50%) scale(1.3);
-  }
-  100% {
-    transform: translate(-50%, -50%) scale(1);
-  }
+  0% { transform: translate(-50%, -50%) scale(1); }
+  50% { transform: translate(-50%, -50%) scale(1.3); }
+  100% { transform: translate(-50%, -50%) scale(1); }
 }
 
 @media (max-width: 768px) {
