--- a/cassie-frontend/src/pages/Home.css
+++ b/cassie-frontend/src/pages/Home.css
@@ -8,16 +8,22 @@
 /* Welcome Section */
 .welcome {
     text-align: center;
-    padding: 3rem 2rem;
+    padding: 2rem 2rem;
+    margin: 3rem 0;
 }
 
 .welcome h1 {
     font-size: 1.5rem;
     font-weight: bold;
+    margin-bottom: 1rem;
+    color: #242938;
 }
 
 .welcome p {
     font-size: 1rem;
+    color: #666;
+    max-width: 600px;
+    margin: 0 auto;
     opacity: 0.8;
 }
 
@@ -27,7 +33,7 @@
     position: relative;
     display: flex;
     justify-content: center;
-    margin: 3rem 0;
+    margin: 0 0 3rem 0;
 }
 
 .hero-image img {
